--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "bootstrap": "^5.3.2",
     "date-fns": "^2.30.0",
+    "ngx-owl-carousel-o": "^16.0.0",
+    "ngx-slick-carousel": "^15.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -32,6 +34,7 @@
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "angular-cli-ghpages": "^0.6.2",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
